--- a/dom.html
+++ b/dom.html
@@ -4,40 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+<link rel="stylesheet" href="domstyle.css">
     <title>Document</title>
 </head>
 <body>
-    <header id="main-header" class="bg-success text-white p-4 mb-3">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6">
-                <h1 id="header-title">Item Lister</h1>
-            </div>
-            <div class="col-md-6 align-self-center">
-                <input type="text" class="form-control" id="filter" placeholder="Search Items...">
-            </div>
-          </div>
-        </div>
-      </header>
-      <div class="container">
-       <div id="main" class="card card-body">
-        <h2 class="title">Add Items</h2>
-        <form id="addForm" class="form-inline mb-3">
-          <input type="text" class="form-control mr-2" id="item">
-          <input type="submit" class="btn btn-dark" value="Submit">
-        </form>
-        <h2 class="title">Items</h2>
-        <ul id="items" class="list-group">
-          <li class="list-group-item">Item 1 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
-          <li class="list-group-item">Item 2 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
-          <li class="list-group-item">Item 3 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
-          <li class="list-group-item">Item 4 <button class="btn btn-danger btn-sm float-right delete">X</button></li>
-        </ul>
-       </div>
+  <div class="head">
+    <header> 
+      <h1 id="headertittle">Item listener</h1>
+      <div class="searchi">
+        <input type="text" class="fillter" id="filter" placeholder="Search here...">
       </div>
-      <p>hello</p>
+      
+    </header>
+
+  </div>
+<div class="temu" id="addTittle" >
+        <h2 class="tilltle">Add Items</h2>
+          <form class="Enter" id="addfom">
+            <input type="text" id="item">
+            <button class="btn">submit</button>
+          </form>
+            
+              <ul class="Itemu" id="itemList">
+                <li class="list">Item 1 <button class="Ccancel">X</button> </li>
+                <li class="list">Item 2 <button class="Ccancel">X</button></li>
+                <li class="list">Item 3 <button class="Ccancel">X</button></li>
+                <li class="list">Item 4 <button class="Ccancel">X</button></li>
+              </ul>
+</div>
+      </div>
 <script src="D..O.M.js"></script>
 </body>
 </html>
